--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
     <body>
         <h1>Hello World!</h1>
-        <p>Hellow World body text</p>
+        <p>Hello World body text</p>
     </body>
 
 
