Fixed doc organization issues

--- a/D&D LFG Website/Project01_About.html
+++ b/D&D LFG Website/Project01_About.html
@@ -6,13 +6,13 @@
     <script type="text/javascript" src="script.js"></script>
 	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 	<script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-	<link rel="stylesheet" href="stylesheet.css" />
+	<link rel="stylesheet" href="style.css" />
 </head>
 <body class="container">
 	<header>
 		<nav id="navbar">
             <ul id="top-menu" class="nav">
-                <li><a href="Project01_Home.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="Project01_Gallery.html">Gallery</a></li>
                 <li><a href="Project01_About.html">About</a></li>
                 <li><a href="Project01_Contact.html">Contact</a></li>
