Update to lab code

--- a/Intro to Bootstrap/AlbumDetails.html
+++ b/Intro to Bootstrap/AlbumDetails.html
@@ -4,10 +4,9 @@
     <title>Music Store</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="styles/bootstrap.min.css">
+    <link href="styles/bootstrap.min.css" rel="stylesheet" >
   </head>
   <body>
     <div class="container">
@@ -15,16 +14,15 @@
             <h1>Music Store</h1>
         </div>
     </div>
-    <div class="row">
-        <div class="col-md-4">
-            <img src="./img/Album Artwork.png" alt="Cover Art">
-        </div>
-        <div class="col-md-8">
+    <div class="container">
+        <div class="row">
+          <div class="col-md-4"><img src="./img/Album Artwork.png" alt="Cover Art"></div>
+          <div class="col-md-8">
             <h3>Album Title</h3>
             <h3>Artist</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi, quod tempore dolores, quas est facere voluptate ullam cupiditate, inventore ducimus nam. Recusandae, delectus, unde aut assumenda voluptate consectetur cupiditate cumque, ducimus velit beatae iure sequi. Adipisci, optio sunt amet impedit vel in eos reiciendis alias neque, laborum, magni ad doloremque? Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi, quod tempore dolores, quas est facere voluptate ullam cupiditate, inventore ducimus nam. Recusandae, delectus, unde aut assumenda voluptate consectetur cupiditate cumque, ducimus velit beatae iure sequi. Adipisci, optio sunt amet impedit vel in eos reiciendis alias neque, laborum, magni ad doloremque?</p>
+          </div>
         </div>
-    </div>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="./scripts/jquery-3.4.1.min.js"></script>
