added required files & nav

--- a/index.html
+++ b/index.html
@@ -10,6 +10,16 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   </head>
   <body>
+    <header>
+		<nav id="navbar">
+            <ul id="top-menu" class="nav">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="https://developers.giphy.com/explorer" target="_blank">API Explorer</a></li>
+                <li><a href="https://developers.giphy.com/faq/" target="_blank">FAQ</a></li>
+                <li><a href="https://developers.giphy.com/docs/sdk" target="_blank">Get Started</a></li>
+        </ul>						
+        </nav>
+    </header>
       
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
