--- a/Project 02/HTML/index.html
+++ b/Project 02/HTML/index.html
@@ -14,7 +14,7 @@
     <header>
 		<nav id="navbar">
             <ul id="top-menu">
-                <li><a href="index.html">Home</a></li>
+                <li><a href="./index.html">Home</a></li>
                 <li><a href="https://developers.giphy.com/explorer" target="_blank">API Explorer</a></li>
                 <li><a href="https://developers.giphy.com/faq/" target="_blank">FAQ</a></li>
                 <li><a href="https://developers.giphy.com/docs/sdk" target="_blank">Get Started</a></li>
